# random-file-generator-rs

./: Cargo.toml  README.md
src/: main.rs
