[package]
name = "rfgen"
version = "0.1.0"
edition = "2021"
description = "Program to create large file consisting of random data"
readme = "README.md"
repository = "https://github.com/Antosser/random-file-generator-rs"
license = "MIT"
keywords = ["random", "file", "generator", "rust"]
categories = ["utilities"]
authors = ["Antosser"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
rand = "0.8.5"
regex = "1.9.3"

[[bin]]
name = "rfgen"
path = "src/main.rs"
